# gen-z-writes

./: .gitignore  LOCAL.md  README.md  _middleware.ts  components.json  global.css  index.d.ts  middleware.ts  next-auth.d.ts  next-sitemap.config.js  next.config.js  package-lock.json  package.json  plasmic-init-client.tsx  plasmic-init.ts  pnpm-lock.yaml  sanity.cli.ts  sanity.config.ts  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: ci.yml  production.yml  staging.yml
app/: fonts.ts  layout.tsx  page.tsx
app/[[...catchall]]/: page.tsx
app/_forgot-password/: page.tsx
app/_login/: page.tsx
app/_signup/: page.tsx
app/database/: layout.tsx  page.tsx
app/forgot-password/: page.tsx
app/login/: page.tsx
app/philosophy/: page.tsx
app/privacy-policy/: page.tsx
app/profile/: page.tsx
app/resources/: data.ts  page.tsx
components/: AuthorImage.tsx  FileDropzone.tsx  Footer.tsx  Nav.tsx  SearchInput.tsx  Swiper.tsx  VideoCard.tsx  VideoGrid.tsx  Youtube.tsx  YoutubeThumbnail.tsx
lib/: r2.ts  sharedOg.ts
prisma/: schema.prisma
sanity/: client.ts  env.ts  fetch.ts  schema.ts
scripts/: addAuthorData.ts  addVideoSlug.ts  getAuthors.ts  migrateAuthors.ts  migrateVideos.ts  package.json  pnpm-lock.yaml  tsconfig.json
scripts/rust/: Cargo.toml
scripts/rust/prisma/: schema.prisma
scripts/rust/src/: main.rs  prisma.rs
supabase/: config.toml
utils/: debounce.ts  getAuthorById.ts  getCharacterValidationError.ts  getVideoBySlug.ts  getVideoByTitle.ts  getVideos.ts  getYoutubeId.ts  handleEmailSubmit.ts  shortenDescription.ts
(+64 files in other folders)
